2004-12-08  Neil Horman		   <nhorman@gmail.com>
	* src/dir.c: Fix to dissallow unreadable files from 
	srcfiles list (sourceforge bug number 1040690)

2004-12-06  Neil Horman		   <nhorman@gmail.com>
	* src/main.c: Fix for temp file security bug (sourceforge 
	bug number 1062807 / CAN-2004-0970)

2004-11-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* doc/cscope.1: Make ESR happy: change man page summary section to
	avoid [0-9] syntax.

2004-10-27  Hans-Bernhard Broeker  <broeker@accip02.physik.rwth-aachen.de>

	* src/display.c (search): Replace duplicated code by a call to
	countrefs().  Duplicate lacked adjustment of column widths in case
	of very long function/file names.  Thanks to Darlene Wong for
	spotting this.

	* src/global.h (countrefs): Prototype added.

	* src/command.c (countrefs): Made globally available.

2004-06-23  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/dir.c (makefilelist): Fix broken movement of point_in_line
	when parsing quoted names.  Simplify structure by moving default
	handling upward.

2004-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* contrib/ocs (SYSDIR): Only set to /usr/local/lib/cs if not
	already set in outside environment.  Check that $(SYSDIR) exists
	before proceeding.  From SF patch #976788 by Neil Horman.

2004-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/vpinit.c (vpinit): Renamed argument currentdir to
	current_dir to avoid name clash with same-named global.

	* src/command.c (Pattern): Renamed from "pattern", to avoid
	multitute of compiler warnings about shadowing by locally defined
	variables of the same name.  Changed all usages of this variable,
	too.
	(command): Test for individual KEY_* macros instead of TERMINFO
	whenever one of the KEY_* macros is referenced.  This should
	reduce the TERMINFO mess a little.

	* src/find.c (read_block): Renamed from "readblock", to avoid name
	clash with QNX system function of that name.  Calls changed